# Distribution-script

./: .env.example  Cargo.toml  README.md
src/: errors.rs  main.rs  requirements.rs  subgraph.rs  validators.rs
src/graphql/: query.graphql  schema.graphql
test/: claim_history.csv  signed_deposit_data-2.json  signed_deposit_data_1.json
test/input/: signed_deposit_data_another_single_valid_deposit.json  signed_deposit_data_invalid_deposit.json  signed_deposit_data_two_valid_deposits.json
