[package]
name = "distribution_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.7.5", features = ["k256"]}
alloy-signer = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.1"
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
graphql_client = "0.14.0"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3.0"

[dev-dependencies]
tempfile = "3.10.1"
