[package]
name = "distribution_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.7.5", features = ["k256", "serde", "ssz"]}
alloy-signer = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.1"
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
graphql_client = "0.14.0"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3.0"
validator = { version = "0.18.1", features = ["derive"] }
ethereum_ssz_derive = "0.5.4"
ethereum_ssz = "0.5.4"
tree_hash = "0.6.0"
tree_hash_derive = "0.6.0"
hex = "0.4.3"
blst = "0.3.12"


[dev-dependencies]
tempfile = "3.10.1"

[features]
serde = ["alloy-primitives/serde"]
ssz = ["alloy-primitives/ssz"]